# aocl-data-analytics

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  License  NOTICES  Notices  README-Release.txt  README-dev.md  README.md
doc/: CMakeLists.txt  C_intro.rst  Doxyfile  api-template  basic-statistics.rst  bibliography.rst  conf.py  csv-files.rst  da-handle.rst  data-management.rst  datastore.rst  doc-utilities.rst  error-codes.rst  extra.md  general-intro.rst  general_intro.rst  genindex.rst  index.rst  linear-models.rst  option-setting.rst  python_intro.rst  refs.bib  requirements.txt  search.rst  sklearn.rst  trees-forests.rst
doc/Algorithms/: index.rst
doc/Algorithms/approximate_neighbors/: ann.rst
doc/Algorithms/basic_statistics/: basic_stats.rst
doc/Algorithms/clustering/: clustering.rst
doc/Algorithms/factorization/: factorization.rst
doc/Algorithms/interpolation/: interpolation.rst
doc/Algorithms/kernel_functions/: kernel_functions.rst
doc/Algorithms/linear_models/: linear_models.rst
doc/Algorithms/metrics/: metrics.rst
doc/Algorithms/nearest_neighbors/: nearest_neighbors.rst
doc/Algorithms/nonlinear_models/: nldf.rst
doc/Algorithms/svm/: svm.rst
doc/Algorithms/train_test_split/: train_test_split.rst
doc/Algorithms/trees_forests/: trees_forest.rst
doc/C/: C_intro.rst  index.rst
doc/C/da_handle/: handle.rst  serialization.rst
doc/C/data_management/: data.rst
doc/C/options/: all_table.rst  option.rst
doc/C/results/: results.rst
doc/Python/: index.rst  python_intro.rst  sklearn.rst
doc/basic_statistics/: basic_stats.rst  basic_stats_api.rst  basic_stats_intro.rst
doc/clustering/: clustering.rst  clustering_api.rst  clustering_intro.rst
doc/da_handle/: handle_api.rst  handle_intro.rst
doc/data_management/: csv_api.rst  data.rst  data_intro.rst  data_intro.rst.gawk.J1d177  datastores_api.rst  utility_api.rst
doc/doc_utilities/: index.rst  utils.rst
doc/errors/: error.rst  error_api.rst  error_intro.rst
doc/factorization/: factorization.rst  factorization_api.rst  factorization_intro.rst
doc/kernel_functions/: kernel_functions.rst  kernel_functions_api.rst  kernel_functions_intro.rst
doc/linear_models/: linear_models.rst  linmod_api.rst  linmod_intro.rst
doc/metrics/: metrics.rst  metrics_api.rst  metrics_intro.rst
doc/nearest_neighbors/: knn.rst  knn_api.rst  knn_intro.rst
doc/nlls/: nlls_api.rst  nlls_intro.rst
doc/nonlinear_models/: nldf.rst  nldf_api.rst  nldf_intro.rst
doc/options/: all_table.rst  option_datastore_api.rst  option_handle_api.rst  option_intro.rst
doc/python/: factorization_api.rst  python_intro.rst
doc/results/: results_api.rst  results_intro.rst
doc/svm/: svm.rst  svm_api.rst  svm_intro.rst
doc/trees_forests/: decision_tree_api.rst  df_intro.rst  trees_forest.rst
python_interface/: .pep8  .pylintrc  CMakeLists.txt  repairwheel.cmake  requirements.txt
python_interface/python_package/: CMakeLists.txt  README.rst  pyproject.toml  setup.py
python_interface/tests/: approximate_neighbors_test.py  basic_stats_test.py  conftest.py  data_validation_test.py  dbscan_test.py  decision_forest_test.py  decision_tree_test.py  kernel_function_test.py  kmeans_test.py  knn_test.py  linmod_test.py  metrics_test.py  miscellaneous_test.py  miscellaneous_tests.py  model_persistence_test.py  nearest_neighbors_test.py  nlls_test.py  pca_test.py  svm_test.py  train_test_split_test.py
source/: CMakeLists.txt
source/core/clustering/: dbscan.cpp  (+19 more)
source/include/: aoclda.h  aoclda_approximate_neighbors.h  aoclda_basic_statistics.h  aoclda_cpp_overloads.hpp  aoclda_csv.h  aoclda_datastore.h  aoclda_dbscan.h  aoclda_decision_forest.h  aoclda_error.h  aoclda_handle.h  aoclda_interpolation.h  aoclda_kernel_function.h  aoclda_kernel_functions.h  aoclda_kmeans.h  aoclda_knn.h  aoclda_linmod.h  aoclda_linreg.h  aoclda_metrics.h  aoclda_miscellaneous.h  aoclda_nearest_neighbors.h  aoclda_nlls.h  aoclda_options.h  aoclda_pca.h  aoclda_print_debug.h  aoclda_result.h  aoclda_svm.h  aoclda_types.h  aoclda_utils.h
tests/examples/: CMakeLists.txt  README.txt  ann.cpp  basic_pca.cpp  basic_pca_test.cpp  basic_statistics.cpp  basic_statistics_test.cpp  cubic_spline.cpp  datastore.cpp  dbscan.cpp  decision_forest.cpp  decision_tree.cpp  decision_tree_ex.cpp  kernel_functions.cpp  kmeans.cpp  knn.cpp  knn_classification.cpp  knn_regression.cpp  lbfgsb_fcomm.cpp  lbfgsb_rc.cpp  lbfgsb_rc_example.cpp  linear_model.cpp  linmod_diabetes.cpp  metrics.cpp  model_persistence_decision_tree.cpp  model_persistence_pca.cpp  nlls.cpp  nlls_lanczos_fd.cpp  nlls_single.cpp  nusvr.cpp  pca.cpp  pca_cancer.cpp  radius_neighbors.cpp  radius_neighbors_classification.cpp  radius_neighbors_regression.cpp  random_forest.cpp  reglinear_model.cpp  svc.cpp  train_test_split.cpp
tests/gtests/: CMakeLists.txt  basic_statistics.cpp  basic_statistics_tests.cpp  correlation_and_covariance_tests.hpp  csv.cpp  csv_tests.cpp  data_tests.cpp  errors_tests.cpp  interval_map_tests.cpp  linmod_functions.hpp  linmod_tests.cc  linmod_tests.cpp  moment_statistics_tests.hpp  option_registry_tests.cpp  order_statistics_tests.hpp  printf_debug.cpp  statistics_utilities_tests.hpp  utest_utils.hpp
tests/unit_tests/: CMakeLists.txt  basic_statistics_tests.cpp  c_compatibility.c  coord_tests.cpp  correlation_and_covariance_tests.hpp  csv_tests.cpp  data_tests.cpp  datests_cblas.hh  decision_forest_tests.cpp  decision_tree_positive.hpp  decision_tree_tests.cpp  doc_tests.cpp  errors_tests.cpp  euclidean_distance_tests.cpp  interval_map_tests.cpp  interval_set_tests.cpp  kmeans_test_data.hpp  kmeans_tests.cpp  knn_tests.cpp  knn_tests.hpp  lbfgsb_fcomm.cpp  lbfgsb_rc.cpp  linmod_functions.hpp  linmod_linreg.hpp  linmod_linreg_tests.cpp  linmod_logreg.hpp  linmod_logreg_tests.cpp  linmod_tests.cpp  metric_tests.cpp  moment_statistics_tests.hpp  nlls_tests.cpp  nlls_tests.hpp  option_registry_tests.cpp  order_statistics_tests.hpp  parallel_test.cpp  pca_test_data.hpp  pca_tests.cpp  printf_debug.cpp  random_forest_positive.hpp  random_forest_tests.cpp  (+2 more)
(+1070 files in other folders)
